
2007-04-25  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* Changelog, debian/changelog, debian/rules, 
		configure.in, src/gnome-xvidcap.glade, 
		doc/man/C/xvidcap.1.xml, 
		doc/man/C/xvidcap.1.xml.pot, 
		doc/man/de/xvidcap.1.xml, doc/man/it/xvidcap.1.xml, 
		doc/xvidcap/C/xvidcap.xml, 
		doc/xvidcap/C/xvidcap.xml.pot, 
		doc/xvidcap/de/xvidcap.xml-de.po, 
		doc/xvidcap/de/xvidcap.xml, 
		doc/xvidcap/it/xvidcap.xml-it.po, 
		doc/xvidcap/it/xvidcap.xml: version bump
		to 1.1.5

2007-04-24  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in, config.h.in, aclocal.m4,
		po/Makefile.in.in, src: gnome_ui.c, app_data.h:
		add compat mode for gtk2.4 by replacing some
		stock button images with old ones.

2007-04-16  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/codecs.c: reenabling audio with swf since it
		seems to work again (playback with adobe
		flash player)

2007-04-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* doc/xvidcap/it/figures/prefs-general.png: Updated
		image for Italian documentation
	* Doxyfile, configure.in, src/gnome-xvidcap.glade,
		debian: changelog, rules: version bump to
		1.1.5rc3

2007-04-11  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po, doc: man/it/xvidcap.1-it.po,
		xvidcap/it/xvidcap.xml-it.po,
		xvidcap/it/xvidcap.xml, man/it/xvidcap.1.xml,
		man/it/xvidcap.1: Italian translation

2007-04-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* debian/control: added build dependencies
	* src: capture.c, gnome_frame.c: cosmetics
	* src/gnome-xvidcap.glade: make frame dimenstions
		display sensitive
	* doc: xmldocs.make, man/C/xvidcap.1, man/man.make, 
		man/de/xvidcap.1.xml, man/de/xvidcap.1, 
		man/it/xvidcap.1.xml, man/it/xvidcap.1, 
		xvidcap/C/xvidcap.xml, 
		xvidcap/de/xvidcap.xml-de.po, 
		xvidcap/de/xvidcap.xml, 
		xvidcap/it/xvidcap.xml-it.po, 
		xvidcap/it/xvidcap.xml: more updates to
		i18n and its build process (forgot -a
		switch to xml2po in some places)

2007-04-09  Karl H. Beckers  <karl.h.beckers@gmx.net>